--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java-library'
     id 'io.qameta.allure' version '2.12.0'
 }
+sourceCompatibility = 21
 allure {
     report {
         version.set("2.29.0")
@@ -32,6 +33,7 @@ tasks.withType(JavaCompile).configureEach {
 test {
     useJUnitPlatform()
     systemProperties(System.getProperties())
+    systemProperty "selenide.headless", System.getProperty("selenide.headless", "false")
 }
 
 tasks.register('allureServe-chrome', Exec) {
